--- a/team-advisor.html
+++ b/team-advisor.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Yubin Lee</title>
+	<title>IDEAL | Advisor</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -220,13 +220,6 @@
     letter-spacing: -0.02em;
     margin-bottom: 0.2rem !important;
     color: #0E4A84 !important;
-  }
-
-  .hero-logo {
-    width: 140px;
-    height: 140px;
-    object-fit: contain;
-    margin: 0 auto 0.8rem auto;
   }
 
   /* 히어로 섹션 오버레이 흰색으로 변경 */
@@ -500,12 +493,12 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav nav ml-auto">
 					<li class="nav-item"><a href="index.html#home-section" class="nav-link"><span>Home</span></a></li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="teamDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<li class="nav-item dropdown active">
+						<a class="nav-link dropdown-toggle active" href="#" id="teamDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							<span>Team</span>
 						</a>
 						<div class="dropdown-menu" aria-labelledby="teamDropdown">
-							<a class="dropdown-item" href="team-advisor.html">Advisor</a>
+							<a class="dropdown-item active" href="team-advisor.html">Advisor</a>
 							<a class="dropdown-item" href="team-researchers.html">Researchers</a>
 						</div>
 					</li>
@@ -516,54 +509,54 @@
 				</div>
 		</div>
 	</nav>
-	<section class="hero-wrap js-fullheight" id="home-section">
-		<div class="overlay"></div>
+	<section class="ftco-section" id="advisor-section">
 		<div class="container">
-			<div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
-				<div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
-					<div class="text text-center">
-						<img src="images/HYU_logo_singlecolor_png.png" alt="Hanyang University" class="hero-logo img-fluid">
-<!--						<span class="subheading">Hello! Here is</span>-->
-						<h1>IDEAL</h1>
-						<h2 class="hero-brand"><strong>I</strong>ntellectual <strong>D</strong>esign for <strong>E</strong>ngineering <strong>A</strong>pplications <strong>L</strong>aboratory</h2>
-						<h2> We are at the intersection of
-							<span class="txt-rotate" data-period="2000" data-speed="120"
-								data-rotate='[ "Engineering Design & AI"]'></span>
-						</h2>
+			<div class="row justify-content-center mb-5 pb-3">
+				<div class="col-md-8 heading-section text-center ftco-animate">
+					<span class="subheading">Team</span>
+					<h2 class="mb-4">Advisor</h2>
+					<p>Advisor: Sunwoong Yang</p>
+				</div>
+			</div>
+
+			<div class="row align-items-center mb-5">
+				<div class="col-md-4 col-lg-4 d-flex">
+					<div class="img-about img d-flex align-items-stretch w-100">
+						<div class="overlay"></div>
+						<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/about.jpg);">
+						</div>
+					</div>
+				</div>
+				<div class="col-md-8 col-lg-8 py-4 py-md-0">
+					<div class="heading-section">
+						<h3 class="mb-3">Yubin Lee</h3>
+						<p>I'm Yubin Lee, a master's student at CCS Graduate School of Mobility, KAIST, conducting my research in the Smart Design Lab under the supervision of Prof. Namwoo Kang.</p>
+						<p>My research interests lie at the intersection of engineering, design, and AI, with a focus on design optimization and AI-driven generative design.</p>
+					</div>
+					<div class="social-icons mt-4">
+						<a href="mailto:yubin.lee@kaist.ac.kr" class="social-icon" title="Email me">
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+								<path d="M0 3v18h24v-18h-24zm6.623 7.929l-4.623 5.712v-9.458l4.623 3.746zm-4.141-5.929h19.035l-9.517 7.713-9.518-7.713zm5.694 7.188l3.824 3.099 3.83-3.104 5.612 6.817h-18.779l5.513-6.812zm9.208-1.264l4.616-3.741v9.348l-4.616-5.607z" />
+							</svg>
+						</a>
+						<a target="_blank" href="https://www.linkedin.com/in/yubinleeatkaist/" class="social-icon" title="LinkedIn">
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+								<path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+							</svg>
+						</a>
+						<a target="_blank" href="https://scholar.google.com/citations?user=KkXPMuMAAAAJ&hl=en" class="social-icon" title="Google Scholar">
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+								<path d="M12 24a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm0-24L0 9.5l4.838 3.94A8 8 0 0 1 12 9a8 8 0 0 1 7.162 4.44L24 9.5z" />
+							</svg>
+						</a>
 					</div>
 				</div>
 			</div>
-		</div>
-		</div>
-		<div class="mouse">
-			<a href="#" class="mouse-icon">
-				<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
-			</a>
-		</div>
-	</section>
 
-
-
-
-	<section class="ftco-section ftco-no-pb goto-here" id="resume-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-3 d-none d-md-block">
-					<nav id="navi">
-						<ul>
-							<li><a href="#page-1">Education</a></li>
-							<li><a href="#page-2">Research Experiences</a></li>
-							<li><a href="#page-3">Awards and Honors</a></li>
-							<li><a href="#page-4">News</a></li>
-						</ul>
-					</nav>
-				</div>
-
-				<div class="col-md-9" id="education-section">
-
-					<div id="page-1" class="page one">
-						<h2 class="heading">Education</h2>
-
+			<div class="advisor-details">
+				<div class="row">
+					<div class="col-md-12 mb-5">
+						<h3 class="advisor-section-title">Education</h3>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text">
 								<span class="date">Sep. 2025 - Present</span>
@@ -572,7 +565,6 @@
 								<p>Advisor: Prof. Namwoo Kang</p>
 							</div>
 						</div>
-
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text">
 								<span class="date">Mar. 2021 - Aug. 2025</span>
@@ -586,36 +578,33 @@
 						</div>
 					</div>
 
-					<div id="page-2" class="page two">
-						<h2 class="heading">Research Experiences</h2>
-
+					<div class="col-md-12 mb-5">
+						<h3 class="advisor-section-title">Research Experiences</h3>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text">
 								<span class="date">Jun. 2024 - Aug. 2024</span>
 								<h2>Research Intern</h2>
 								<span class="position">Affective Systems and Cognitive Lab, KAIST</span>
 								<div>
-									<div>- Developed a conceptual design for a space for non-human beings</div>
+									<div> - Developed a conceptual design for a space for non-human beings</div>
 								</div>
 							</div>
 						</div>
-
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text">
 								<span class="date">Jul. 2022 - Jun. 2024</span>
 								<h2>Undergraduate Researcher</h2>
 								<span class="position">Flow Physics & Computational Engineering Innovation Lab, Kyung Hee University</span>
 								<div>
-									<div>- Automated cardiovascular simulation workflows</div>
-									<div>- Intracranial aneurysm modeling and CFD simulation</div>
+									<div> - Automated cardiovascular simulation workflows</div>
+									<div> - Intracranial aneurysm modeling and CFD simulation</div>
 								</div>
 							</div>
 						</div>
 					</div>
 
-					<div id="page-3" class="page three">
-						<h2 class="heading">Awards and Honors</h2>
-
+					<div class="col-md-12">
+						<h3 class="advisor-section-title">Awards and Honors</h3>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text">
 								<span class="date">Nov. 2024</span>
@@ -623,7 +612,6 @@
 								<span class="position">Kyung Hee University</span>
 							</div>
 						</div>
-
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text">
 								<span class="date">Nov. 2023</span>
@@ -631,7 +619,6 @@
 								<span class="position">The Korean Society of Mechanical Engineers (KSME)</span>
 							</div>
 						</div>
-
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text">
 								<span class="date">Jan. 2022 - Feb. 2024</span>
@@ -639,7 +626,6 @@
 								<span class="position">Korea Foundation for Advanced Studies (KFAS)</span>
 							</div>
 						</div>
-
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text">
 								<span class="date">Aug. 2022</span>
@@ -648,40 +634,10 @@
 							</div>
 						</div>
 					</div>
-
-					<div id="page-4" class="page four">
-						<h2 class="heading">News</h2>
-						<div class="news-item ftco-animate">
-							<img src="images/image_3.jpg" alt="news">
-							<div>
-								<span class="date">Sep. 26, 2025</span>
-								<h4>Celebrated my birthday with lab mates</h4>
-								<p>Grateful for their warm wishes and even a birthday song.</p>
-							</div>
-						</div>
-						<div class="news-item ftco-animate">
-							<img src="images/image_2.png" alt="news">
-							<div>
-								<span class="date">Aug. 25, 2025</span>
-								<h4>Joined SDL at KAIST</h4>
-								<p>Excited to begin this journey and hoping for many joyful days of research ahead.</p>
-							</div>
-						</div>
-						<div class="news-item ftco-animate">
-							<img src="images/image_1.jpg" alt="news">
-							<div>
-								<span class="date">Aug. 20, 2025</span>
-								<h4>Officially graduated from Kyung Hee University</h4>
-								<p>Feeling surreal to close this chapter and step into the next one.</p>
-							</div>
-						</div>
-					</div>
-
 				</div>
 			</div>
 		</div>
 	</section>
-
 
 	<footer class="ftco-footer ftco-section">
 		<div class="container">
