--- a/team-researchers.html
+++ b/team-researchers.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Yubin Lee</title>
+	<title>IDEAL | Researchers</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -220,13 +220,6 @@
     letter-spacing: -0.02em;
     margin-bottom: 0.2rem !important;
     color: #0E4A84 !important;
-  }
-
-  .hero-logo {
-    width: 140px;
-    height: 140px;
-    object-fit: contain;
-    margin: 0 auto 0.8rem auto;
   }
 
   /* 히어로 섹션 오버레이 흰색으로 변경 */
@@ -500,13 +493,13 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav nav ml-auto">
 					<li class="nav-item"><a href="index.html#home-section" class="nav-link"><span>Home</span></a></li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="teamDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<li class="nav-item dropdown active">
+						<a class="nav-link dropdown-toggle active" href="#" id="teamDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							<span>Team</span>
 						</a>
 						<div class="dropdown-menu" aria-labelledby="teamDropdown">
 							<a class="dropdown-item" href="team-advisor.html">Advisor</a>
-							<a class="dropdown-item" href="team-researchers.html">Researchers</a>
+							<a class="dropdown-item active" href="team-researchers.html">Researchers</a>
 						</div>
 					</li>
 					<li class="nav-item"><a href="publications.html" class="nav-link"><span>Publications</span></a></li>
@@ -516,172 +509,41 @@
 				</div>
 		</div>
 	</nav>
-	<section class="hero-wrap js-fullheight" id="home-section">
-		<div class="overlay"></div>
+	<section class="ftco-section bg-light" id="researchers-section">
 		<div class="container">
-			<div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
-				<div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
-					<div class="text text-center">
-						<img src="images/HYU_logo_singlecolor_png.png" alt="Hanyang University" class="hero-logo img-fluid">
-<!--						<span class="subheading">Hello! Here is</span>-->
-						<h1>IDEAL</h1>
-						<h2 class="hero-brand"><strong>I</strong>ntellectual <strong>D</strong>esign for <strong>E</strong>ngineering <strong>A</strong>pplications <strong>L</strong>aboratory</h2>
-						<h2> We are at the intersection of
-							<span class="txt-rotate" data-period="2000" data-speed="120"
-								data-rotate='[ "Engineering Design & AI"]'></span>
-						</h2>
+			<div class="row justify-content-center mb-5 pb-3">
+				<div class="col-md-8 heading-section text-center ftco-animate">
+					<span class="subheading">Team</span>
+					<h2 class="mb-4">Researchers</h2>
+					<p>Meet the researchers driving IDEAL. We are growing and will introduce new collaborators soon.</p>
+				</div>
+			</div>
+
+			<div class="row justify-content-center">
+				<div class="col-md-6 col-lg-4 mb-4 ftco-animate">
+					<div class="team-card">
+						<div class="team-role">Master's Student</div>
+						<h4>Yubin Lee</h4>
+						<p>Researches engineering design optimization and AI-driven generative design.</p>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4 mb-4 ftco-animate">
+					<div class="team-card team-card-placeholder">
+						<div class="team-role">Researcher</div>
+						<h4>Next Member</h4>
+						<p>More IDEAL researchers will be introduced soon.</p>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4 mb-4 ftco-animate">
+					<div class="team-card team-card-placeholder">
+						<div class="team-role">Researcher</div>
+						<h4>Next Member</h4>
+						<p>More IDEAL researchers will be introduced soon.</p>
 					</div>
 				</div>
 			</div>
 		</div>
-		</div>
-		<div class="mouse">
-			<a href="#" class="mouse-icon">
-				<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
-			</a>
-		</div>
 	</section>
-
-
-
-
-	<section class="ftco-section ftco-no-pb goto-here" id="resume-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-3 d-none d-md-block">
-					<nav id="navi">
-						<ul>
-							<li><a href="#page-1">Education</a></li>
-							<li><a href="#page-2">Research Experiences</a></li>
-							<li><a href="#page-3">Awards and Honors</a></li>
-							<li><a href="#page-4">News</a></li>
-						</ul>
-					</nav>
-				</div>
-
-				<div class="col-md-9" id="education-section">
-
-					<div id="page-1" class="page one">
-						<h2 class="heading">Education</h2>
-
-						<div class="resume-wrap d-flex ftco-animate">
-							<div class="text">
-								<span class="date">Sep. 2025 - Present</span>
-								<h2>Korea Advanced Institute of Science and Technology (KAIST)</h2>
-								<span class="position">Master's Student in CCS Graduate School of Mobility</span>
-								<p>Advisor: Prof. Namwoo Kang</p>
-							</div>
-						</div>
-
-						<div class="resume-wrap d-flex ftco-animate">
-							<div class="text">
-								<span class="date">Mar. 2021 - Aug. 2025</span>
-								<h2>Kyung Hee University</h2>
-								<span class="position">
-									Bachelor of Engineering in Mechanical Engineering <br>
-									Bachelor of Engineering in Engineering Design (Student Designed Major)
-								</span>
-								<p>Advisor: Prof. Jongmin Seo</p>
-							</div>
-						</div>
-					</div>
-
-					<div id="page-2" class="page two">
-						<h2 class="heading">Research Experiences</h2>
-
-						<div class="resume-wrap d-flex ftco-animate">
-							<div class="text">
-								<span class="date">Jun. 2024 - Aug. 2024</span>
-								<h2>Research Intern</h2>
-								<span class="position">Affective Systems and Cognitive Lab, KAIST</span>
-								<div>
-									<div>- Developed a conceptual design for a space for non-human beings</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="resume-wrap d-flex ftco-animate">
-							<div class="text">
-								<span class="date">Jul. 2022 - Jun. 2024</span>
-								<h2>Undergraduate Researcher</h2>
-								<span class="position">Flow Physics & Computational Engineering Innovation Lab, Kyung Hee University</span>
-								<div>
-									<div>- Automated cardiovascular simulation workflows</div>
-									<div>- Intracranial aneurysm modeling and CFD simulation</div>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div id="page-3" class="page three">
-						<h2 class="heading">Awards and Honors</h2>
-
-						<div class="resume-wrap d-flex ftco-animate">
-							<div class="text">
-								<span class="date">Nov. 2024</span>
-								<h2>Academic Excellence Award</h2>
-								<span class="position">Kyung Hee University</span>
-							</div>
-						</div>
-
-						<div class="resume-wrap d-flex ftco-animate">
-							<div class="text">
-								<span class="date">Nov. 2023</span>
-								<h2>National Undergraduate Fluid Mechanics Competition <br>Gold Prize</h2>
-								<span class="position">The Korean Society of Mechanical Engineers (KSME)</span>
-							</div>
-						</div>
-
-						<div class="resume-wrap d-flex ftco-animate">
-							<div class="text">
-								<span class="date">Jan. 2022 - Feb. 2024</span>
-								<h2>Forest of Talents Scholarship</h2>
-								<span class="position">Korea Foundation for Advanced Studies (KFAS)</span>
-							</div>
-						</div>
-
-						<div class="resume-wrap d-flex ftco-animate">
-							<div class="text">
-								<span class="date">Aug. 2022</span>
-								<h2>Superiority Scholarship</h2>
-								<span class="position">Kyung Hee University</span>
-							</div>
-						</div>
-					</div>
-
-					<div id="page-4" class="page four">
-						<h2 class="heading">News</h2>
-						<div class="news-item ftco-animate">
-							<img src="images/image_3.jpg" alt="news">
-							<div>
-								<span class="date">Sep. 26, 2025</span>
-								<h4>Celebrated my birthday with lab mates</h4>
-								<p>Grateful for their warm wishes and even a birthday song.</p>
-							</div>
-						</div>
-						<div class="news-item ftco-animate">
-							<img src="images/image_2.png" alt="news">
-							<div>
-								<span class="date">Aug. 25, 2025</span>
-								<h4>Joined SDL at KAIST</h4>
-								<p>Excited to begin this journey and hoping for many joyful days of research ahead.</p>
-							</div>
-						</div>
-						<div class="news-item ftco-animate">
-							<img src="images/image_1.jpg" alt="news">
-							<div>
-								<span class="date">Aug. 20, 2025</span>
-								<h4>Officially graduated from Kyung Hee University</h4>
-								<p>Feeling surreal to close this chapter and step into the next one.</p>
-							</div>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</section>
-
 
 	<footer class="ftco-footer ftco-section">
 		<div class="container">
