--- a/index.html
+++ b/index.html
@@ -246,6 +246,12 @@
     margin-top: 0 !important;
   }
 
+  .hero-wrap .letter-highlight {
+    border-bottom: 2px solid #0E4A84;
+    padding-bottom: 0.1rem;
+    display: inline-block;
+  }
+
   .hero-wrap .subheading {
     font-size: 0.95rem !important;
     font-weight: 500 !important;
@@ -525,7 +531,7 @@
 						<img src="images/HYU_logo_singlecolor_png.png" alt="Hanyang University" class="hero-logo img-fluid">
 <!--						<span class="subheading">Hello! Here is</span>-->
 						<h1>IDEAL</h1>
-						<h2 class="hero-brand"><strong>I</strong>ntellectual <strong>D</strong>esign for <strong>E</strong>ngineering <strong>A</strong>pplications <strong>L</strong>aboratory</h2>
+						<h2 class="hero-brand"><strong><span class="letter-highlight">I</span></strong>ntellectual <strong><span class="letter-highlight">D</span></strong>esign for <strong><span class="letter-highlight">E</span></strong>ngineering <strong><span class="letter-highlight">A</span></strong>pplications <strong><span class="letter-highlight">L</span></strong>aboratory</h2>
 						<h2> We are at the intersection of
 							<span class="txt-rotate" data-period="2000" data-speed="120"
 								data-rotate='[ "Engineering Design & AI"]'></span>
