--- a/index.html
+++ b/index.html
@@ -247,9 +247,11 @@
   }
 
   .hero-wrap .letter-highlight {
-    border-bottom: 2px solid #0E4A84;
-    padding-bottom: 0.1rem;
-    display: inline-block;
+    font-weight: 700;
+    color: #000;
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-decoration-color: #000;
   }
 
   .hero-wrap .subheading {
@@ -531,7 +533,7 @@
 						<img src="images/HYU_logo_singlecolor_png.png" alt="Hanyang University" class="hero-logo img-fluid">
 <!--						<span class="subheading">Hello! Here is</span>-->
 						<h1>IDEAL</h1>
-						<h2 class="hero-brand"><strong><span class="letter-highlight">I</span></strong>ntellectual <strong><span class="letter-highlight">D</span></strong>esign for <strong><span class="letter-highlight">E</span></strong>ngineering <strong><span class="letter-highlight">A</span></strong>pplications <strong><span class="letter-highlight">L</span></strong>aboratory</h2>
+						<h2 class="hero-brand"><span class="letter-highlight">I</span>ntellectual <span class="letter-highlight">D</span>esign for <span class="letter-highlight">E</span>ngineering <span class="letter-highlight">A</span>pplications <span class="letter-highlight">L</span>aboratory</h2>
 						<h2> We are at the intersection of
 							<span class="txt-rotate" data-period="2000" data-speed="120"
 								data-rotate='[ "Engineering Design & AI"]'></span>
